--- a/Assets/UIDocuments/ShipLogEditor.uxml
+++ b/Assets/UIDocuments/ShipLogEditor.uxml
@@ -75,47 +75,49 @@
                                                     <ui:DataBinding property="value" data-source-path="assistedDeceleration" binding-mode="TwoWay" />
                                                 </Bindings>
                                             </ui:Toggle>
-                                            <ui:EnumField label="Control Mode" value="Center" type="NavalCombatCore.ControlMode, Assembly-CSharp">
-                                                <Bindings>
-                                                    <ui:DataBinding property="value" data-source-path="controlMode" binding-mode="TwoWay" />
-                                                </Bindings>
-                                            </ui:EnumField>
-                                            <ui:VisualElement style="flex-grow: 1; border-left-width: 1px; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
-                                                <ui:TextField label="Followed Target" readonly="true">
-                                                    <Bindings>
-                                                        <ui:DataBinding property="value" data-source-path="followedTargetDesc" binding-mode="ToTarget" />
-                                                    </Bindings>
-                                                </ui:TextField>
-                                                <ui:Label text="In map view, select a ship, press F and then press on another ship to set the followed target." style="white-space: normal;" />
-                                                <ui:FloatField label="Follow Distance (yards)">
-                                                    <Bindings>
-                                                        <ui:DataBinding property="value" data-source-path="followDistanceYards" binding-mode="TwoWay" />
-                                                    </Bindings>
-                                                </ui:FloatField>
-                                                <Bindings>
-                                                    <ui:DataBinding property="style.display" data-source-path="displayStyleOfControlModeIsFollowTarget" binding-mode="ToTarget" />
-                                                </Bindings>
-                                            </ui:VisualElement>
                                             <ui:VisualElement style="flex-grow: 1; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
-                                                <ui:TextField label="Relative To" readonly="true">
+                                                <ui:EnumField label="Control Mode" value="Center" type="NavalCombatCore.ControlMode, Assembly-CSharp">
                                                     <Bindings>
-                                                        <ui:DataBinding property="value" data-source-path="relativeToTargetDesc" binding-mode="ToTarget" />
+                                                        <ui:DataBinding property="value" data-source-path="controlMode" binding-mode="TwoWay" />
                                                     </Bindings>
-                                                </ui:TextField>
-                                                <ui:Label text="In map view, select a ship, press R and then press on another ship to set the relative to target." style="white-space: normal;" />
-                                                <ui:FloatField label="Relative To Dist (yds)">
+                                                </ui:EnumField>
+                                                <ui:VisualElement style="flex-grow: 1;">
+                                                    <ui:TextField label="Followed Target" readonly="true">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="followedTargetDesc" binding-mode="ToTarget" />
+                                                        </Bindings>
+                                                    </ui:TextField>
+                                                    <ui:Label text="In map view, select a ship, press F and then press on another ship to set the followed target." style="white-space: normal;" />
+                                                    <ui:FloatField label="Follow Distance (yards)">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="followDistanceYards" binding-mode="TwoWay" />
+                                                        </Bindings>
+                                                    </ui:FloatField>
                                                     <Bindings>
-                                                        <ui:DataBinding property="value" data-source-path="relativeToTargetDistanceYards" binding-mode="TwoWay" />
+                                                        <ui:DataBinding property="style.display" data-source-path="displayStyleOfControlModeIsFollowTarget" binding-mode="ToTarget" />
                                                     </Bindings>
-                                                </ui:FloatField>
-                                                <ui:Slider label="Relative To Azimuth (deg)" high-value="360" show-input-field="true">
+                                                </ui:VisualElement>
+                                                <ui:VisualElement style="flex-grow: 1;">
+                                                    <ui:TextField label="Relative To" readonly="true">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="relativeToTargetDesc" binding-mode="ToTarget" />
+                                                        </Bindings>
+                                                    </ui:TextField>
+                                                    <ui:Label text="In map view, select a ship, press R and then press on another ship to set the relative to target." style="white-space: normal;" />
+                                                    <ui:FloatField label="Relative To Dist (yds)">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="relativeToTargetDistanceYards" binding-mode="TwoWay" />
+                                                        </Bindings>
+                                                    </ui:FloatField>
+                                                    <ui:Slider label="Relative To Azimuth (deg)" high-value="360" show-input-field="true">
+                                                        <Bindings>
+                                                            <ui:DataBinding property="value" data-source-path="relativeToTargetAzimuth" binding-mode="TwoWay" />
+                                                        </Bindings>
+                                                    </ui:Slider>
                                                     <Bindings>
-                                                        <ui:DataBinding property="value" data-source-path="relativeToTargetAzimuth" binding-mode="TwoWay" />
+                                                        <ui:DataBinding property="style.display" data-source-path="displayStyleOfControlModeIsRelativeToTarget" binding-mode="ToTarget" />
                                                     </Bindings>
-                                                </ui:Slider>
-                                                <Bindings>
-                                                    <ui:DataBinding property="style.display" data-source-path="displayStyleOfControlModeIsRelativeToTarget" binding-mode="ToTarget" />
-                                                </Bindings>
+                                                </ui:VisualElement>
                                             </ui:VisualElement>
                                             <ui:EnumField label="Map State" value="Center" type="NavalCombatCore.MapState, Assembly-CSharp">
                                                 <Bindings>
@@ -204,37 +206,40 @@
                                     </ui:VisualElement>
                                 </ui:VisualElement>
                             </ui:Tab>
-                            <ui:Tab label="Weapons">
+                            <ui:Tab label="Battery">
                                 <ui:ScrollView>
                                     <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                        <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
-                                            <ui:ListView binding-source-selection-mode="AutoAssign" header-title="Battery Status" show-add-remove-footer="true" show-foldout-header="true" name="BatteryStatusListView" item-template="project://database/Assets/UIDocuments/BatteryStatusEditor.uxml?fileID=9197481963319205126&amp;guid=a7e04f44f7a7c42429e749f2381c0861&amp;type=3#BatteryStatusEditor" virtualization-method="DynamicHeight" data-source-path="batteryStatus" />
-                                        </ui:VisualElement>
-                                        <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
-                                            <ui:SliderInt label="Torpedo Ammunition" high-value="100" show-input-field="true">
-                                                <Bindings>
-                                                    <ui:DataBinding property="highValue" data-source-path="shipClassProperty.torpedoSector.ammunitionCapacity" binding-mode="ToTarget" />
-                                                    <ui:DataBinding property="value" data-source-path="torpedoSectorStatus.ammunition" binding-mode="TwoWay" />
-                                                </Bindings>
-                                            </ui:SliderInt>
-                                            <ui:MultiColumnListView name="TorpedoMountStatusMultiColumnListView" binding-source-selection-mode="AutoAssign" data-source-path="torpedoSectorStatus.mountStatus" show-add-remove-footer="true" header-title="Torpedo Status" show-foldout-header="true">
-                                                <ui:Columns>
-                                                    <ui:Column title="Info" name="torpedoMountLocationRecordSummary" cell-template="project://database/Assets/UIDocuments/Templates/MountStatus/MountStatusCellMountTorpedoLocationRecordSummary.uxml?fileID=9197481963319205126&amp;guid=8eee01ca8da27de4dac4f05ca8b5529f&amp;type=3#MountStatusCellMountTorpedoLocationRecordSummary" width="40%" />
-                                                    <ui:Column cell-template="project://database/Assets/UIDocuments/Templates/MountStatus/MountStatusCellStatus.uxml?fileID=9197481963319205126&amp;guid=59c6fb856a1cee248a8d5aa1a0da437b&amp;type=3#MountStatusCellStatus" title="Sec. Status" name="status" width="40%" />
-                                                    <ui:Column cell-template="project://database/Assets/UIDocuments/Templates/MountStatus/MountStatusCellMountsDestroyed.uxml?fileID=9197481963319205126&amp;guid=766ec090531af0345bc395a0a59d2b2a&amp;type=3#MountStatusCellMountsDestroyed" width="20%" title="Mnts Destroyed" name="mountsDestroyed" />
-                                                </ui:Columns>
-                                            </ui:MultiColumnListView>
-                                            <ui:MultiColumnListView data-source-path="rapidFiringStatus" binding-source-selection-mode="AutoAssign" header-title="Rapid Fire Battey Status" show-foldout-header="true" show-add-remove-footer="true" name="RapidFiringStatusMultiColumnListView" virtualization-method="DynamicHeight">
-                                                <ui:Columns>
-                                                    <ui:Column name="info2" title="Info " width="55%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellInfo.uxml?fileID=9197481963319205126&amp;guid=58e98a2315c32e74aad30b4986ab4fca&amp;type=3#RapidFiringStatusCellInfo" />
-                                                    <ui:Column name="portMountsHits" title="Port Hits" width="15%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellPortMountHits.uxml?fileID=9197481963319205126&amp;guid=59a76a29ea32f414a838e4734f23e63f&amp;type=3#RapidFiringStatusCellPortMountHits" />
-                                                    <ui:Column name="startboardHits" title="Stbd Hits" width="15%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellStarboardMountHits.uxml?fileID=9197481963319205126&amp;guid=a069033f6299c7148a90eb7f02c1e0da&amp;type=3#RapidFiringStatusCellStarboardMountHits" />
-                                                    <ui:Column width="15%" name="fireControlHits" title="FC Hits" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellFireControlHits.uxml?fileID=9197481963319205126&amp;guid=879353972eec67a4a9ebf237e99e16ca&amp;type=3#RapidFiringStatusCellFireControlHits" />
-                                                </ui:Columns>
-                                            </ui:MultiColumnListView>
-                                        </ui:VisualElement>
+                                        <ui:ListView binding-source-selection-mode="AutoAssign" header-title="Battery Status" show-add-remove-footer="true" show-foldout-header="true" name="BatteryStatusListView" item-template="project://database/Assets/UIDocuments/BatteryStatusEditor.uxml?fileID=9197481963319205126&amp;guid=a7e04f44f7a7c42429e749f2381c0861&amp;type=3#BatteryStatusEditor" virtualization-method="DynamicHeight" data-source-path="batteryStatus" style="flex-grow: 1;" />
                                     </ui:VisualElement>
                                 </ui:ScrollView>
+                            </ui:Tab>
+                            <ui:Tab label="Torpedo">
+                                <ui:VisualElement style="flex-grow: 1;">
+                                    <ui:SliderInt label="Torpedo Ammunition" high-value="100" show-input-field="true">
+                                        <Bindings>
+                                            <ui:DataBinding property="highValue" data-source-path="shipClassProperty.torpedoSector.ammunitionCapacity" binding-mode="ToTarget" />
+                                            <ui:DataBinding property="value" data-source-path="torpedoSectorStatus.ammunition" binding-mode="TwoWay" />
+                                        </Bindings>
+                                    </ui:SliderInt>
+                                    <ui:MultiColumnListView name="TorpedoMountStatusMultiColumnListView" binding-source-selection-mode="AutoAssign" data-source-path="torpedoSectorStatus.mountStatus" show-add-remove-footer="true" header-title="Torpedo Status" show-foldout-header="true">
+                                        <ui:Columns>
+                                            <ui:Column title="Info" name="torpedoMountLocationRecordSummary" cell-template="project://database/Assets/UIDocuments/Templates/MountStatus/MountStatusCellMountTorpedoLocationRecordSummary.uxml?fileID=9197481963319205126&amp;guid=8eee01ca8da27de4dac4f05ca8b5529f&amp;type=3#MountStatusCellMountTorpedoLocationRecordSummary" width="40%" />
+                                            <ui:Column cell-template="project://database/Assets/UIDocuments/Templates/MountStatus/MountStatusCellStatus.uxml?fileID=9197481963319205126&amp;guid=59c6fb856a1cee248a8d5aa1a0da437b&amp;type=3#MountStatusCellStatus" title="Status" name="status" width="40%" />
+                                        </ui:Columns>
+                                    </ui:MultiColumnListView>
+                                </ui:VisualElement>
+                            </ui:Tab>
+                            <ui:Tab label="Rapid Firing Battery">
+                                <ui:VisualElement style="flex-grow: 1;">
+                                    <ui:MultiColumnListView data-source-path="rapidFiringStatus" binding-source-selection-mode="AutoAssign" header-title="Rapid Fire Battey Status" show-foldout-header="true" show-add-remove-footer="true" name="RapidFiringStatusMultiColumnListView" virtualization-method="DynamicHeight">
+                                        <ui:Columns>
+                                            <ui:Column name="info2" title="Info " width="55%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellInfo.uxml?fileID=9197481963319205126&amp;guid=58e98a2315c32e74aad30b4986ab4fca&amp;type=3#RapidFiringStatusCellInfo" />
+                                            <ui:Column name="portMountsHits" title="Port Hits" width="15%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellPortMountHits.uxml?fileID=9197481963319205126&amp;guid=59a76a29ea32f414a838e4734f23e63f&amp;type=3#RapidFiringStatusCellPortMountHits" />
+                                            <ui:Column name="startboardHits" title="Stbd Hits" width="15%" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellStarboardMountHits.uxml?fileID=9197481963319205126&amp;guid=a069033f6299c7148a90eb7f02c1e0da&amp;type=3#RapidFiringStatusCellStarboardMountHits" />
+                                            <ui:Column width="15%" name="fireControlHits" title="FC Hits" cell-template="project://database/Assets/UIDocuments/Templates/RapidFiringStatus/RapidFiringStatusCellFireControlHits.uxml?fileID=9197481963319205126&amp;guid=879353972eec67a4a9ebf237e99e16ca&amp;type=3#RapidFiringStatusCellFireControlHits" />
+                                        </ui:Columns>
+                                    </ui:MultiColumnListView>
+                                </ui:VisualElement>
                             </ui:Tab>
                         </ui:TabView>
                         <Bindings>
