--- a/Assets/UIDocuments/Templates/MountStatus/MountStatusCellMountTorpedoLocationRecordSummary.uxml
+++ b/Assets/UIDocuments/Templates/MountStatus/MountStatusCellMountTorpedoLocationRecordSummary.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Label data-source-type="NavalCombatCore.MountStatusRecord, Assembly-CSharp">
+    <ui:Label data-source-type="NavalCombatCore.MountStatusRecord, Assembly-CSharp" style="-unity-font-definition: url(&quot;project://database/Assets/Fonts/NotoSansMono_ExtraCondensed-Regular.ttf?fileID=12800000&amp;guid=d3a0126bfd4299043910f2fd8adceef6&amp;type=3#NotoSansMono_ExtraCondensed-Regular&quot;);">
         <Bindings>
             <ui:DataBinding property="text" data-source-path="torpedoMountLocationRecordSummary" binding-mode="ToTarget" />
         </Bindings>
