--- a/Assets/UIDocuments/ShipLogEditor.uxml
+++ b/Assets/UIDocuments/ShipLogEditor.uxml
@@ -242,6 +242,69 @@
                                     </ui:MultiColumnListView>
                                 </ui:VisualElement>
                             </ui:Tab>
+                            <ui:Tab label="Score">
+                                <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
+                                        <ui:FloatField label="Armor" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="armorScoreProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Survivability" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="survivabilityProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Battery Firepower" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="batteryFirepowerProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Torpedo Threat" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="torpedoThreatScoreProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Rapid Firing Bty FP" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="rapidFiringFirepowerProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Firepower" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="firepoweScoreProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="General" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="generalScoreProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                    </ui:VisualElement>
+                                    <ui:VisualElement style="flex-grow: 1; flex-basis: 100px;">
+                                        <ui:FloatField label="Bty Bow FP" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="firepowerBowProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Bty Starboard FP" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="firepowerStarboardProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Bty Stern FP" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="firepowerSternProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                        <ui:FloatField label="Bty Port FP" readonly="true">
+                                            <Bindings>
+                                                <ui:DataBinding property="value" data-source-path="firepowerPortProp" binding-mode="ToTarget" />
+                                            </Bindings>
+                                        </ui:FloatField>
+                                    </ui:VisualElement>
+                                </ui:VisualElement>
+                            </ui:Tab>
                         </ui:TabView>
                         <Bindings>
                             <ui:DataBinding property="style.display" data-source-path="namedShipProp" binding-mode="ToTarget" source-to-ui-converters="NamedShip to DisplayStyle" />
