Add Scenario state editor and more gunfire implementation

--- a/Assets/UIDocuments/TopTabs.uxml
+++ b/Assets/UIDocuments/TopTabs.uxml
@@ -18,12 +18,13 @@
                 </ui:VisualElement>
             </ui:Tab>
             <ui:Tab label="Editor">
-                <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                <ui:VisualElement style="flex-grow: 1; flex-direction: row; flex-wrap: wrap;">
                     <ui:Button text="Leader Editor" name="LeaderEditorButton" />
                     <ui:Button text="Class Editor" name="ClassEditorButton" />
                     <ui:Button text="Named Ship Editor" name="NamedShipEditorButton" />
                     <ui:Button text="Ship Log Editor" name="ShipLogEditorButton" />
                     <ui:Button text="OOB Editor" name="OOBEditorButton" />
+                    <ui:Button text="Scenario State Editor" name="ScenarioStateEditorButton" />
                 </ui:VisualElement>
             </ui:Tab>
             <ui:Tab label="Preference">
