--- a/Assets/UIDocuments/BatteryStatusEditor.uxml
+++ b/Assets/UIDocuments/BatteryStatusEditor.uxml
@@ -10,6 +10,7 @@
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; flex-shrink: 0;">
             <ui:VisualElement style="flex-grow: 0; flex-shrink: 0; flex-direction: row;">
+                <ui:Button text="Detail" name="BatteryDetailButton" />
                 <ui:Label text="Capacity:" />
                 <ui:Label>
                     <Bindings>
